style: finish button

--- a/src/app/components/button/button.module.css
+++ b/src/app/components/button/button.module.css
@@ -1,14 +1,38 @@
 .button {
-  border-radius: 10px;
+  border-radius: 5px;
+  padding: 12px;
+  cursor: pointer;
 }
 
 .primary {
-  background-color: #8D85E8;
-  color: #FCFBFF;
+  background-color: var(--violet);
+  color: var(--offWhite);
+  border: none;
+}
+
+.primary:hover {
+  background-color: var(--disabledViolet);
+}
+
+.primary:disabled {
+  background-color: var(--disabledViolet);
+  color: var(--disabledGrey);
+  cursor: default;
 }
 
 .secondary {
   background-color: transparent;
-  color: #FCFBFF;
-  border: solid 2px #FCFBFF;
+  color: var(--offWhite);
+  border: solid 2px var(--offWhite);
+}
+
+.secondary:hover {
+  color: var(--disabledGrey);
+  border: solid 2px var(--disabledGrey);
+}
+
+.secondary:disabled {
+  color: var(--disabledGrey);
+  border: solid 2px var(--disabledGrey);
+  cursor: default;
 }
