--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,7 +4,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  min-height: 100vh;
 }
 
 /* .description {
@@ -24,3 +23,7 @@
   align-items: center;
   gap: 0.5rem;
 } */
+
+.testButton {
+  margin: 24px;
+}
