--- a/src/app/components/input/input.module.css
+++ b/src/app/components/input/input.module.css
@@ -5,4 +5,6 @@
   border-radius: var(--borderRadius);
   background-color: var(--grey-2);
   color: var(--disabledGrey);
+
+  margin-bottom: 15px;
 }
